--- a/index.html
+++ b/index.html
@@ -97,90 +97,6 @@ display: none;
 </div>
 </div>
 </section>
-<!-- About Section -->
-<section id="about" class="py-20 bg-white">
-<div class="container mx-auto px-4">
-<div class="text-center mb-16">
-<h2 class="text-4xl font-bold mb-3 text-gray-800 font-['Playfair_Display']">Sobre Nosotros / About Us</h2>
-</div>
-<div class="flex flex-col md:flex-row gap-10 items-center">
-<div class="md:w-1/2">
-<img src="https://readdy.ai/api/search-image?query=Colorful%20Indian%20spices%20in%20small%20bowls%20arranged%20on%20a%20wooden%20surface%2C%20including%20turmeric%2C%20red%20chili%20powder%2C%20cumin%2C%20coriander%2C%20garam%20masala%2C%20cardamom%20pods%2C%20cinnamon%20sticks%2C%20and%20cloves%2C%20vibrant%20colors&width=600&height=400&seq=9&orientation=landscape" alt="Indian Spices" class="w-full h-64 object-cover object-top hover:scale-105 transition-transform duration-300">
-</div>
-<div class="md:w-1/2">
-<h3 class="text-2xl font-bold mb-4 text-gray-800 font-['Playfair_Display']">Tradición y Autenticidad / Tradition and Authenticity</h3>
-<p class="text-gray-700 mb-4">
-Descubre los sabores auténticos de la India en pleno corazón de Puerto de Mazarrón. Nuestros chefs fusionan ingredientes frescos locales con especias tradicionales traídas directamente desde la India para ofrecerte una agradable experiencia.
-</p>
-<p class="text-gray-700 mb-6">
-Discover the authentic flavors of India in the heart of Puerto de Mazarrón. Our chefs fuse fresh local ingredients with traditional spices brought directly from India to offer you an enjoyable experience.
-</p>
-<div class="flex flex-col sm:flex-row gap-4">
-<div class="flex items-center gap-3 bg-amber-50 p-4 rounded-lg">
-<div class="w-12 h-12 flex items-center justify-center bg-primary/10 rounded-full text-primary">
-<i class="ri-award-line ri-xl"></i>
-</div>
-<div>
-<h4 class="font-bold text-gray-800">Cocina Auténtica / Authentic Cuisine</h4>
-<p class="text-sm text-gray-600">Recetas tradicionales / Traditional recipes</p>
-</div>
-</div>
-<div class="flex items-center gap-3 bg-amber-50 p-4 rounded-lg">
-<div class="w-12 h-12 flex items-center justify-center bg-primary/10 rounded-full text-primary">
-<i class="ri-fire-line ri-xl"></i>
-</div>
-<div>
-<h4 class="font-bold text-gray-800">Tandoor Horno / Tandoor Oven</h4>
-<p class="text-sm text-gray-600">Sabores únicos / Unique flavors</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
-<!-- Special Features -->
-<section class="py-16 bg-amber-50/70">
-<div class="container mx-auto px-4">
-<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-<div class="bg-white p-6 rounded-lg shadow-md text-center">
-<div class="w-16 h-16 mx-auto flex items-center justify-center bg-primary/10 rounded-full text-primary mb-4">
-<i class="ri-leaf-line ri-2x"></i>
-</div>
-<h3 class="text-xl font-bold mb-2 text-gray-800 font-['Playfair_Display']">Opciones Vegetarianas / Vegetarian Options</h3>
-<p class="text-gray-600">
-Amplia selección de platos vegetarianos auténticos de la India.
-<br>
-Wide selection of authentic Indian vegetarian dishes.
-</p>
-</div>
-<div class="bg-white p-6 rounded-lg shadow-md text-center">
-<div class="w-16 h-16 mx-auto flex items-center justify-center bg-primary/10 rounded-full text-primary mb-4">
-<i class="ri-restaurant-line ri-2x"></i>
-</div>
-<h3 class="text-xl font-bold mb-2 text-gray-800 font-['Playfair_Display']">Menú Diario / Daily Menu</h3>
-<p class="text-gray-600">
-Disfruta de nuestras opciones especiales a un precio increíble.
-<br>
-Enjoy our special options at an incredible price.
-</p>
-</div>
-<div class="bg-white p-6 rounded-lg shadow-md text-center">
-<a href="tel:+34617916691" class="block">
-<div class="w-16 h-16 mx-auto flex items-center justify-center bg-primary/10 rounded-full text-primary mb-4">
-<i class="ri-takeaway-line ri-2x"></i>
-</div>
-<h3 class="text-xl font-bold mb-2 text-gray-800 font-['Playfair_Display']">Para Llevar / Takeaway</h3>
-<p class="text-gray-600">
-Todos nuestros platos disponibles para llevar y disfrutar en casa.
-<br>
-All our dishes available for takeaway to enjoy at home.
-</p>
-</a>
-</div>
-</div>
-</div>
-</section>
 <!-- Menu Section -->
 <section id="menu" class="py-20 bg-white">
 <div class="container mx-auto px-4">
@@ -1796,6 +1712,90 @@ Discover the authentic flavors of India with our traditional recipes.
     </div>
 </div>
 </section>
+  <!-- About Section -->
+<section id="about" class="py-20 bg-white">
+<div class="container mx-auto px-4">
+<div class="text-center mb-16">
+<h2 class="text-4xl font-bold mb-3 text-gray-800 font-['Playfair_Display']">Sobre Nosotros / About Us</h2>
+</div>
+<div class="flex flex-col md:flex-row gap-10 items-center">
+<div class="md:w-1/2">
+<img src="https://readdy.ai/api/search-image?query=Colorful%20Indian%20spices%20in%20small%20bowls%20arranged%20on%20a%20wooden%20surface%2C%20including%20turmeric%2C%20red%20chili%20powder%2C%20cumin%2C%20coriander%2C%20garam%20masala%2C%20cardamom%20pods%2C%20cinnamon%20sticks%2C%20and%20cloves%2C%20vibrant%20colors&width=600&height=400&seq=9&orientation=landscape" alt="Indian Spices" class="w-full h-64 object-cover object-top hover:scale-105 transition-transform duration-300">
+</div>
+<div class="md:w-1/2">
+<h3 class="text-2xl font-bold mb-4 text-gray-800 font-['Playfair_Display']">Tradición y Autenticidad / Tradition and Authenticity</h3>
+<p class="text-gray-700 mb-4">
+Descubre los sabores auténticos de la India en pleno corazón de Puerto de Mazarrón. Nuestros chefs fusionan ingredientes frescos locales con especias tradicionales traídas directamente desde la India para ofrecerte una agradable experiencia.
+</p>
+<p class="text-gray-700 mb-6">
+Discover the authentic flavors of India in the heart of Puerto de Mazarrón. Our chefs fuse fresh local ingredients with traditional spices brought directly from India to offer you an enjoyable experience.
+</p>
+<div class="flex flex-col sm:flex-row gap-4">
+<div class="flex items-center gap-3 bg-amber-50 p-4 rounded-lg">
+<div class="w-12 h-12 flex items-center justify-center bg-primary/10 rounded-full text-primary">
+<i class="ri-award-line ri-xl"></i>
+</div>
+<div>
+<h4 class="font-bold text-gray-800">Cocina Auténtica / Authentic Cuisine</h4>
+<p class="text-sm text-gray-600">Recetas tradicionales / Traditional recipes</p>
+</div>
+</div>
+<div class="flex items-center gap-3 bg-amber-50 p-4 rounded-lg">
+<div class="w-12 h-12 flex items-center justify-center bg-primary/10 rounded-full text-primary">
+<i class="ri-fire-line ri-xl"></i>
+</div>
+<div>
+<h4 class="font-bold text-gray-800">Tandoor Horno / Tandoor Oven</h4>
+<p class="text-sm text-gray-600">Sabores únicos / Unique flavors</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
+<!-- Special Features -->
+<section class="py-16 bg-amber-50/70">
+<div class="container mx-auto px-4">
+<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+<div class="bg-white p-6 rounded-lg shadow-md text-center">
+<div class="w-16 h-16 mx-auto flex items-center justify-center bg-primary/10 rounded-full text-primary mb-4">
+<i class="ri-leaf-line ri-2x"></i>
+</div>
+<h3 class="text-xl font-bold mb-2 text-gray-800 font-['Playfair_Display']">Opciones Vegetarianas / Vegetarian Options</h3>
+<p class="text-gray-600">
+Amplia selección de platos vegetarianos auténticos de la India.
+<br>
+Wide selection of authentic Indian vegetarian dishes.
+</p>
+</div>
+<div class="bg-white p-6 rounded-lg shadow-md text-center">
+<div class="w-16 h-16 mx-auto flex items-center justify-center bg-primary/10 rounded-full text-primary mb-4">
+<i class="ri-restaurant-line ri-2x"></i>
+</div>
+<h3 class="text-xl font-bold mb-2 text-gray-800 font-['Playfair_Display']">Menú Diario / Daily Menu</h3>
+<p class="text-gray-600">
+Disfruta de nuestras opciones especiales a un precio increíble.
+<br>
+Enjoy our special options at an incredible price.
+</p>
+</div>
+<div class="bg-white p-6 rounded-lg shadow-md text-center">
+<a href="tel:+34617916691" class="block">
+<div class="w-16 h-16 mx-auto flex items-center justify-center bg-primary/10 rounded-full text-primary mb-4">
+<i class="ri-takeaway-line ri-2x"></i>
+</div>
+<h3 class="text-xl font-bold mb-2 text-gray-800 font-['Playfair_Display']">Para Llevar / Takeaway</h3>
+<p class="text-gray-600">
+Todos nuestros platos disponibles para llevar y disfrutar en casa.
+<br>
+All our dishes available for takeaway to enjoy at home.
+</p>
+</a>
+</div>
+</div>
+</div>
+</section>
 <!-- Gallery Section -->
 <section class="py-20 bg-white">
 <div class="container mx-auto px-4">
@@ -1872,9 +1872,9 @@ Visit us or contact us for reservations and takeaway orders.
 <div>
 <h4 class="font-bold text-gray-800 mb-1">Horario / Opening Hours</h4>
 <p class="text-gray-600">
-Lunes a Domingo / Monday to Sunday
+Lunes cerrado, de Martes a Domingo / Monday closed, Tuesday to Sunday
 <br>
-12:00 - 16:00, 19:00 - 23:30
+12:00 - 15:30, 18:00 - 23:00
 </p>
 </div>
 </div>
