--- a/index.html
+++ b/index.html
@@ -1987,15 +1987,23 @@ activeTab = this;
 });
 // Smooth scroll for anchor links
 document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-anchor.addEventListener('click', function(e) {
-e.preventDefault();
-const targetId = this.getAttribute('href');
-if (targetId === '#') return;
-const targetElement = document.querySelector(targetId);
-if (targetElement) {
-window.scrollTo({
-top: targetElement.offsetTop - 80,
-behavior: 'smooth'
+  anchor.addEventListener('click', function(e) {
+    e.preventDefault();
+    const targetId = this.getAttribute('href');
+    if (targetId === '#') return;
+    
+    // Actualiza la URL con el hash
+    if (history.pushState) {
+      history.pushState(null, null, targetId);
+    } else {
+      location.hash = targetId;
+    }
+
+    const targetElement = document.querySelector(targetId);
+    if (targetElement) {
+      window.scrollTo({
+        top: targetElement.offsetTop - 80,
+        behavior: 'smooth'
 });
 // Close mobile menu if open
 if (!mobileMenu.classList.contains('hidden')) {
