--- a/index.html
+++ b/index.html
@@ -1791,26 +1791,30 @@ Discover the SARTAJ experience through our images.
 </p>
 </div>
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-<div class="overflow-hidden rounded-lg shadow-md">
-<img src="https://readdy.ai/api/search-image?query=Authentic%20Indian%20butter%20chicken%20curry%20with%20naan%20bread%2C%20served%20in%20traditional%20copper%20bowl%2C%20rich%20creamy%20orange%20sauce%2C%20tender%20chicken%20pieces%2C%20garnished%20with%20fresh%20coriander%2C%20on%20a%20rustic%20wooden%20table%20with%20spices&width=600&height=400&seq=4&orientation=landscape" alt="Butter Chicken" class="w-full h-64 object-cover object-top hover:scale-105 transition-transform duration-300">
+  <div class="overflow-hidden rounded-lg shadow-md">
+    <img src="Total.png" alt="mix2" class="aspect-[3/2] object-cover object-center hover:scale-105 transition-transform duration-300 rounded-lg"/>
+  </div>
+  <div class="overflow-hidden rounded-lg shadow-md">
+    <img src="Combi.png" alt="Mix" class="aspect-[3/2] object-cover object-center hover:scale-105 transition-transform duration-300 rounded-lg"/>
+  </div>
+  <div class="overflow-hidden rounded-lg shadow-md">
+    <img src="Samosa.png" alt="aspect" class="aspect-[3/2] object-cover object-center hover:scale-105 transition-transform duration-300 rounded-lg"/>
+  </div>
+  <div class="inline-block rounded-lg shadow-md overflow-hidden">
+    <img src="dd2ed671-a621-445c-8854-e0d58265e2a7.png" alt="Naan Bread"
+         class="aspect-[3/2] object-cover object-center hover:scale-105 transition-transform duration-300 rounded-lg" />
+  </div>
+  <div class="overflow-hidden rounded-lg shadow-md">
+    <img src="mango-dessert-2.png" alt="Mango Dessert"
+         class="w-full max-w-[600px] aspect-[3/2] object-cover object-center mx-auto hover:scale-105 transition-transform duration-300 rounded-lg shadow-md" />
+  </div>
+  <!-- NUEVA IMAGEN AÑADIDA -->
+  <div class="overflow-hidden rounded-lg shadow-md">
+    <img src="Postre.png" alt="Postre especial"
+         class="aspect-[3/2] object-cover object-center hover:scale-105 transition-transform duration-300 rounded-lg"/>
+  </div>
 </div>
-<div class="overflow-hidden rounded-lg shadow-md">
-<img src="https://readdy.ai/api/search-image?query=Colorful%20Indian%20thali%20platter%20with%20various%20curries%2C%20rice%2C%20naan%20bread%2C%20raita%2C%20chutneys%2C%20and%20pickles%20arranged%20in%20small%20bowls%2C%20traditional%20brass%20plate%2C%20authentic%20presentation%2C%20vibrant%20colors%2C%20aromatic%20spices%20visible&width=600&height=400&seq=5&orientation=landscape" alt="Thali Platter" class="w-full h-64 object-cover object-top hover:scale-105 transition-transform duration-300">
-</div>
-<div class="overflow-hidden rounded-lg shadow-md">
-<img src="https://readdy.ai/api/search-image?query=Tandoori%20mixed%20grill%20with%20chicken%20tikka%2C%20seekh%20kebab%2C%20lamb%20chops%20and%20prawns%2C%20served%20on%20a%20sizzling%20plate%20with%20onions%20and%20bell%20peppers%2C%20garnished%20with%20lemon%20wedges%20and%20fresh%20herbs%2C%20smoky%20appearance&width=600&height=400&seq=6&orientation=landscape" alt="Tandoori Mixed Grill" class="w-full h-64 object-cover object-top hover:scale-105 transition-transform duration-300">
-</div>
-<div class="inline-block rounded-lg shadow-md overflow-hidden">
-  <img src="dd2ed671-a621-445c-8854-e0d58265e2a7.png"
-       alt="Naan Bread"
-       class="aspect-[3/2] object-cover object-center hover:scale-105 transition-transform duration-300 rounded-lg" />
-</div>
-<div class="overflow-hidden rounded-lg shadow-md">
-<img src="mango-dessert-2.png" alt="Mango Dessert"
-     class="w-full max-w-[600px] aspect-[3/2] object-cover object-center mx-auto hover:scale-105 transition-transform duration-300 rounded-lg shadow-md">
-<div class="overflow-hidden rounded-lg shadow-md">
-</div>
-</div>
+
 </div>
 </div>
 </section>
