--- a/index.html
+++ b/index.html
@@ -1812,6 +1812,7 @@ Discover the SARTAJ experience through our images.
   <div class="overflow-hidden rounded-lg shadow-md">
     <img src="Postre.png" alt="Postre especial"
          class="aspect-[3/2] object-cover object-center hover:scale-105 transition-transform duration-300 rounded-lg"/>
+     </div>
   </div>
 </div>
 
