--- a/index.html
+++ b/index.html
@@ -526,6 +526,21 @@ Discover the authentic flavors of India with our traditional recipes.
 <div id="tandoori" class="menu-section">
   <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Sartaj Tandoori</h3>
   <div class="space-y-6">
+     <!-- 32 Tandori Chicken -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div class="flex-grow">
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">32.</span> Tandoori Chicken / Tandoori Pollo</h4>
+        <p class="text-sm text-gray-600">
+         Tender chicken marinated in yogurt, aromatic spices and cooked in tandoor
+          <br>
+         Tierno pollo marinados en yogur, especias aromáticas y cocinados al tandoor
+        </p>
+        <div class="mt-2 space-y-1 text-sm">
+          <div class="flex justify-between"><span>Starter</span> <span>5,95€</span></div>
+          <div class="flex justify-between"><span>Main</span> <span>11,50€</span></div>
+        </div>
+      </div>
+    </div>
     <!-- 33 Chicken Tikka -->
     <div class="flex justify-between items-start pb-4 border-b border-gray-200">
       <div class="flex-grow">
@@ -2018,4 +2033,5 @@ window.addEventListener('load', function() {
 </script>
 </body>
 </html>
+
 
