--- a/index.html
+++ b/index.html
@@ -269,90 +269,100 @@ Discover the authentic flavors of India with our traditional recipes.
   <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Sopas / Soups</h3>
   <div class="space-y-6">
     
-    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
-      <div>
-        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">7.</span> Tomato Soup / Sopa de Tomate</h4>
-        <p class="text-sm text-gray-600">
-          Creamy tomato soup garnished with fresh coriander
-          <br>
-          Sopa cremosa de tomate decorada con cilantro fresco
-        </p>
-      </div>
-      <span class="font-bold text-primary">4,95€</span>
-    </div>
+  <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">7.</span> Vegetable soup: All include traditional indian herbs and spice / Sopa vegetal: Todas incluyen hierbas y especias indias</h4>
+    <p class="text-sm text-gray-600">
+      </p>
+  </div>
+  <span class="font-bold text-primary">4,25€</span>
+</div>
 
-    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
-      <div>
-        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">8.</span> Daal Soup / Sopa Daal</h4>
-        <p class="text-sm text-gray-600">
-          Mildly spiced lentil soup seasoned with cumin, ginger and fresh coriander
-          <br>
-          Sopa de lentejas suavemente especiada con comino, jengibre y cilantro fresco
-        </p>
-      </div>
-      <span class="font-bold text-primary">5,50€</span>
-    </div>
-    <div class="flex justify-between items-start">
-      <div>
-        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">9.</span> Chicken Soup / Sopa de Pollo</h4>
-        <p class="text-sm text-gray-600">
-          Aromatic chicken soup with Indian herbs and spices
-          <br>
-          Sopa aromática de pollo con hierbas y especias indias
-        </p>
-      </div>
-      <span class="font-bold text-primary">5,95€</span>
-    </div>
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">8.</span> Chicken soup / Sopa de pollo</h4>
+    <p class="text-sm text-gray-600">
+      </p>
+  </div>
+  <span class="font-bold text-primary">4,95€</span>
+</div>
+
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">9.</span> Prawn Garlic soup / Sopa de gamba ajo</h4>
+    <p class="text-sm text-gray-600">
+      </p>
+  </div>
+  <span class="font-bold text-primary">4,95€</span>
+</div>
+
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">10.</span> Tomato soup / Sopa de tomate</h4>
+    <p class="text-sm text-gray-600">
+      </p>
+  </div>
+  <span class="font-bold text-primary">3,95€</span>
+</div>
+
+<div class="flex justify-between items-start">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">11.</span> Lentil soup / Sopa de lentejas</h4>
+    <p class="text-sm text-gray-600">
+      </p>
+  </div>
+  <span class="font-bold text-primary">3,95€</span>
+</div>
   </div>
 </div>
 <!-- Starters -->
 <div id="starters" class="menu-section">
   <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Entrantes / Starters</h3>
   <div class="space-y-6">
-    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
-      <div>
-        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">10.</span> Samosas Vegetales / Vegetable Samosas</h4>
-        <p class="text-sm text-gray-600">
-          Fried pastry stuffed with potatoes and green peas with spices (2 pcs)
-          <br>
-          Empanadillas fritas rellenas de patatas y guisantes verdes con especias (2 uds)
-        </p>
-      </div>
-      <span class="font-bold text-primary">5,95€</span>
-    </div>
-    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
-      <div>
-        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">11.</span> Onion Bhaji / Bhaji de Cebolla</h4>
-        <p class="text-sm text-gray-600">
-          Sliced onion dipped in chickpea flour and fried
-          <br>
-          Cebolla rebozada en harina de garbanzo y frita
-        </p>
-      </div>
-      <span class="font-bold text-primary">5,50€</span>
-    </div>
-    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
-      <div>
-        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">12.</span> Chicken Pakora / Pakora de Pollo</h4>
-        <p class="text-sm text-gray-600">
-          Tender pieces of chicken breast marinated in spices, dipped in chickpea flour and deep fried
-          <br>
-          Trozos de pechuga de pollo marinados en especias, rebozados en harina de garbanzo y fritos
-        </p>
-      </div>
-      <span class="font-bold text-primary">6,95€</span>
-    </div>
-    <div class="flex justify-between items-start">
-      <div>
-        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">13.</span> Mixed Platter / Plato Mixto</h4>
-        <p class="text-sm text-gray-600">
-          Combination of vegetable samosas, onion bhaji and chicken pakora (for 2 people)
-          <br>
-          Combinación de samosas de verduras, bhaji de cebolla y pakora de pollo (para 2 personas)
-        </p>
-      </div>
-      <span class="font-bold text-primary">12,95€</span>
-    </div>
+  <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">12.</span> Poppadum / Poppadum</h4>
+    <p class="text-sm text-gray-600">
+      Deep Fried Poppadum
+      <br>
+      (Torta de lentejas frita)
+    </p>
+  </div>
+  <span class="font-bold text-primary">0,99€</span>
+</div>
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">13.</span> Masala Poppadum / Masala Poppadum</h4>
+    <p class="text-sm text-gray-600">
+      Decorated with cheese, onions, ginger, chilli and fresh coriander
+      <br>
+      (Decorada con queso, cebolla, jengibre, chile y cilantro fresco)
+    </p>
+  </div>
+  <span class="font-bold text-primary">1,75€</span>
+</div>
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">14.</span> Onion Bhaji / Cebolla Bhaji</h4>
+    <p class="text-sm text-gray-600">
+      Freshly chopped onions mixed in gram flour batter with herbs and spices and deep fried
+      <br>
+      (Cebollas frescas cortadas y mezcladas con harina de grano, hierbas y especial y frito)
+    </p>
+  </div>
+  <span class="font-bold text-primary">4,95€</span>
+</div>
+<div class="flex justify-between items-start">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">15.</span> Vegetable Samosa / Samosa Vegetal</h4>
+    <p class="text-sm text-gray-600">
+      Crisp pastry stuffed with vegetables
+      <br>
+      (Hojaldre crujiente relleno de verduras)
+    </p>
+  </div>
+  <span class="font-bold text-primary">4,95€</span>
+</div>
      <div class="flex justify-between items-start pb-4 border-b border-gray-200">
       <div>
         <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">16.</span> Vegetable Pakora / Pakora Vegetal</h4>
@@ -2033,5 +2043,6 @@ window.addEventListener('load', function() {
 </script>
 </body>
 </html>
+
 
 
